fixed overflow issue and font size in mobile width

--- a/client/src/components/LoginBtns/style.css
+++ b/client/src/components/LoginBtns/style.css
@@ -2,46 +2,12 @@ body{
     background-color: #8A8B8C;
 }
 
-.container{
-    max-width: 600px;
-}
-
-.form{
-    font-family: 'Lato', sans-serif;
-    color: black;
-}
-
-.form-control-lg{
-    width: 570px;
-}
-
-.btn-lg{
-    display: inline;
-}
-
-.button, .btn{
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.dropdown{
-    margin-top: 10px;
-    color: blue;
-}
-
-.card-body{
-    background-color: #8A8B8C;
-    border: none;
-}
-
-.upper{
-    text-align: center;
-    margin-bottom: 20px;
-}
-
 @media only screen and (max-width: 460px) {
-    .form-control-lg {
-      max-width: 400px
+    .card {
+      max-width: 300px
+    }
+    h4 {
+        font-size: 1.2rem;
     }
   }
 
